--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -35,7 +35,7 @@ nav li{
 }
 
 a,button{
-    font-size: 20px;
+    font-size: 18px;
     font-weight: 500;
     color: #fff;
     text-decoration: none;
@@ -57,4 +57,11 @@ nav li a:hover{
 button:hover{
     background-color: #3974f4;
     transition: all 0.4s ease 0s;
+}
+
+form input{
+    height: 40px;
+    width: 150px;
+    margin: 0px 10px;
+    border: 1px solid black;
 }
