--- a/src/app/principal/principal.component.html
+++ b/src/app/principal/principal.component.html
@@ -28,6 +28,16 @@
   </mat-grid-list>
 </div>
 
+<iframe
+  style="display:block;margin: 0 auto;"
+  width="560"
+  height="315"
+  [src]="video | domseguro:'https://www.youtube.com/embed/' "
+  frameborder="0"
+  allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-inpicture"
+  allowfullscreen
+></iframe>
+
 <section class="appointment-section">
     <div class="appointment-container">
       <h2>Agenda una cita en nuestra farmacia</h2>
