--- a/src/app/reporte-citas/reporte-citas.component.html
+++ b/src/app/reporte-citas/reporte-citas.component.html
@@ -5,6 +5,7 @@
       <th>Apellido</th>
       <th>Email</th>
       <th>Hora</th>
+      <th>Especialidad</th>
       <th>Fecha</th>
     </tr>
   </thead>
@@ -13,7 +14,8 @@
       <td>{{ dato.formularioContacto.nombre }}</td>
       <td>{{ dato.formularioContacto.apellido }}</td>
       <td>{{ dato.formularioContacto.mail }}</td>
-      <td>{{ dato.formularioContacto.timepo }}</td>
+      <td>{{ dato.formularioContacto.tiempo }}</td>
+      <td>{{ dato.medico }}</td>
       <td>{{ dato.horario }}</td>
     </tr>
   </tbody>
