Last Compile ahora si

--- a/src/app/acercade/acercade.component.html
+++ b/src/app/acercade/acercade.component.html
@@ -16,7 +16,7 @@
             <!-- BARAA CON ICONOS  -->
             <div id="tarCirculares">
                 <div id="tarAvatar">
-                    <img src="../assets/imagenes/llamada.png" alt="Llamada emergencia" class="avatar"><br><br>
+                    <img src="assets/imagenes/llamada.png" alt="Llamada emergencia" class="avatar"><br><br>
                     <h1 id="txtAnimacion1"><b>Emergencia</b></h1>
                     <p style="color: #011f6f;">
                         Trasladamos a los pacientes desde el lugar donde se produce la situación
@@ -24,7 +24,7 @@
                 </div>
 
                 <div id="tarAvatar">
-                    <img src="../assets/imagenes/estetoscopio.png" alt="Llamada emergencia" class="avatar"><br><br>
+                    <img src="assets/imagenes/estetoscopio.png" alt="Llamada emergencia" class="avatar"><br><br>
                     <h1 id="txtAnimacion1"><b>El mejor trato</b></h1>
                     <p style="color: #011f6f">
                         Creamos un ambiente cómodo y seguro para brindarte una mejor atención
@@ -32,14 +32,14 @@
                 </div>
 
                 <div id="tarAvatar">
-                    <img src="../assets/imagenes/doctor.png" alt="Llamada emergencia" class="avatar"><br><br>
+                    <img src="assets/imagenes/doctor.png" alt="Llamada emergencia" class="avatar"><br><br>
                     <h1 id="txtAnimacion1"><b>Personal médico</b></h1>
                     <p style="color: #011f6f">
                         Dispuestos a ayudarte de la manera más atenta
                     </p>
                 </div>
                 <div id="tarAvatar">
-                    <img src="../assets/imagenes/ambulancia.png" alt="Llamada emergencia" class="avatar"><br><br>
+                    <img src="assets/imagenes/ambulancia.png" alt="Llamada emergencia" class="avatar"><br><br>
                     <h1 id="txtAnimacion1"><b>Doctores calificados</b></h1>
                     <p style="color: #011f6f">
                         Responsables de las decisiones que afectan al cuidado del paciente
@@ -48,7 +48,7 @@
             </div>
 
             <div id="dos">
-                <img src="../assets/imagenes/corazon.png" style="width: 70px;" alt="">
+                <img src="assets/imagenes/corazon.png" style="width: 70px;" alt="">
                 <p style="margin-left: 30px; margin-right: 30px;">EN NUESTRO HOSPITAL, <b>NOS ESFORZAMOS</b></p>
                 <p style="font-size: 20px;">por brindar un ambiente acogedor y seguro para nuestros pacientes, donde se
                     sientan cómodos y confiados de que están recibiendo el mejor cuidado posible. Además, nos aseguramos
@@ -63,7 +63,7 @@
             <div id="tarjetas">
                 <div class="card">
                     <div class="face front">
-                        <img src="../assets/imagenes/objetivo.jpg" alt="Objetivo">
+                        <img src="assets/imagenes/objetivo.jpg" alt="Objetivo">
                         <h3>Objetivo</h3>
                     </div>
                     <div class="face back">
@@ -80,7 +80,7 @@
 
                 <div class="card">
                     <div class="face front">
-                        <img src="../assets/imagenes/vision.jpg" alt="Vision">
+                        <img src="assets/imagenes/vision.jpg" alt="Vision">
                         <h3>Visión</h3>
                     </div>
                     <div class="face back">
@@ -95,7 +95,7 @@
 
                 <div class="card">
                     <div class="face front">
-                        <img src="../assets/imagenes/mision.jpg" alt="Mision">
+                        <img src="assets/imagenes/mision.jpg" alt="Mision">
                         <h3>Misión</h3>
                     </div>
                     <div class="face back">
@@ -116,7 +116,7 @@
 
                 <div id="nosotros">
                     <div class="card-alumno" style="margin-right: 250px;margin-left: 200px;">
-                        <div class="card_landing" style="--i:url(../assets/imagenes/andrew.jpeg)">
+                        <div class="card_landing" style="--i:url(/assets/imagenes/andrew.jpeg)">
                             <h6>{{andrew.nombre}}</h6>
                         </div>
                         <div class="card_info">
@@ -132,7 +132,7 @@
                     </div>
 
                     <div class="card-alumno" style="margin-right: 250px;">
-                        <div class="card_landing" style="--i:url(../assets/imagenes/luis.png)">
+                        <div class="card_landing" style="--i:url(/assets/imagenes/luis.png)">
                             <h6>{{luis.nombre}}</h6>
                         </div>
                         <div class="card_info">
@@ -148,7 +148,7 @@
                     </div>
 
                     <div class="card-alumno" style="margin-right: 250px;">
-                        <div class="card_landing" style="--i:url(../assets/imagenes/jacqueline.png)">
+                        <div class="card_landing" style="--i:url(/assets/imagenes/jacqueline.png)">
                             <h6>{{jacqueline.nombre}}</h6>
                         </div>
                         <div class="card_info">
@@ -167,7 +167,7 @@
 
                 <div id="nosotros">
                     <div class="card-alumno" style="margin-left: 20px;">
-                        <div class="card_landing" style="--i:url(../assets/imagenes/fabian.jpeg)">
+                        <div class="card_landing" style="--i:url(/assets/imagenes/fabian.jpeg)">
                             <h6>{{fabian.nombre}}</h6>
                         </div>
                         <div class="card_info">
@@ -183,7 +183,7 @@
                     </div>
 
                     <div class="card-alumno" style="margin-left: 300px;">
-                        <div class="card_landing" style="--i:url(../assets/imagenes/rafa.jpeg)">
+                        <div class="card_landing" style="--i:url(/assets/imagenes/rafa.jpeg)">
                             <h6>{{rafael.nombre}}</h6>
                         </div>
                         <div class="card_info">
