Last Compile ahora si te lo juro

--- a/src/app/acercade/acercade.component.html
+++ b/src/app/acercade/acercade.component.html
@@ -132,7 +132,7 @@
                     </div>
 
                     <div class="card-alumno" style="margin-right: 250px;">
-                        <div class="card_landing" style="--i:url(/assets/imagenes/luis.png)">
+                        <div class="card_landing" style="--i:url(assets/imagenes/luis.png)">
                             <h6>{{luis.nombre}}</h6>
                         </div>
                         <div class="card_info">
@@ -148,7 +148,7 @@
                     </div>
 
                     <div class="card-alumno" style="margin-right: 250px;">
-                        <div class="card_landing" style="--i:url(/assets/imagenes/jacqueline.png)">
+                        <div class="card_landing" style="--i:url(assets/imagenes/jacqueline.png)">
                             <h6>{{jacqueline.nombre}}</h6>
                         </div>
                         <div class="card_info">
@@ -167,7 +167,7 @@
 
                 <div id="nosotros">
                     <div class="card-alumno" style="margin-left: 20px;">
-                        <div class="card_landing" style="--i:url(/assets/imagenes/fabian.jpeg)">
+                        <div class="card_landing" style="--i:url(assets/imagenes/fabian.jpeg)">
                             <h6>{{fabian.nombre}}</h6>
                         </div>
                         <div class="card_info">
@@ -183,7 +183,7 @@
                     </div>
 
                     <div class="card-alumno" style="margin-left: 300px;">
-                        <div class="card_landing" style="--i:url(/assets/imagenes/rafa.jpeg)">
+                        <div class="card_landing" style="--i:url(assets/imagenes/rafa.jpeg)">
                             <h6>{{rafael.nombre}}</h6>
                         </div>
                         <div class="card_info">
