--- a/src/app/acercade/acercade.component.html
+++ b/src/app/acercade/acercade.component.html
@@ -116,7 +116,7 @@
 
                 <div id="nosotros">
                     <div class="card-alumno" style="margin-right: 250px;margin-left: 200px;">
-                        <div class="card_landing" style="--i:url(/assets/imagenes/andrew.jpeg)">
+                        <div class="card_landing" style="--i:url(assets/imagenes/andrew.jpeg)">
                             <h6>{{andrew.nombre}}</h6>
                         </div>
                         <div class="card_info">
