--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -6,6 +6,7 @@
                 <p class="text-muted">Somos una farmacia con servicio de antencion medica por medio de citas programas.
                     contamos con multiples especialistas y servicios medico para anteder tus malestares y necesidades de
                     la salud</p>
+                <p class="text-muted">Esto es un proyecto universitario</p>
                 <ul class="list-inline mt-4">
                     <li class="list-inline-item"><a href="#" class="text-white"><i class="fab fa-facebook"></i></a></li>
                     <li class="list-inline-item"><a href="#" class="text-white"><i class="fab fa-twitter"></i></a></li>
@@ -16,8 +17,8 @@
             <div class="col-md-4 col-lg-3 mb-4 mb-md-0">
                 <h5 class="text-uppercase mb-4">Contactanos</h5>
                 <ul class="list-unstyled">
-                    <li class="mb-3"><i class="fas fa-map-marker-alt me-2"></i>123 Main St. New York, NY 10001</li>
-                    <li class="mb-3"><i class="fas fa-envelope me-2"></i><a href="mailto:info@example.com"
+                    <li class="mb-3"><i class="fas fa-map-marker-alt me-2"></i>Calle José María Bocanegra #701 Aguascalientes, Ags</li>
+                    <li class="mb-3"><i class="fas fa-envelope me-2"></i><a href="simi:info@gmail.com"
                             class="text-white">famrmaciasParecidas@gmail.com</a></li>
                     <li class="mb-3"><i class="fas fa-phone me-2"></i><a href="tel:+1-123-456-7890"
                             class="text-white">+1 (123) 456-7890</a></li>
