Correcciones de orotgrafia ou yea

--- a/src/app/principal/principal.component.html
+++ b/src/app/principal/principal.component.html
@@ -2,7 +2,7 @@
     <div class="banner-img-container">
       <img src="assets/img/fondo_banner.jpg" alt="Imagen de fondo del banner">
     </div>
-    <h1>Bienvenido a Farmacias Pareciadas</h1>
+    <h1>Bienvenido a Farmacias Parecidas</h1>
     <p>Parecido pero de un precio inferior</p>
 </div>
 <div class="recomendacion">
