--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -3,7 +3,7 @@
         <div class="row">
             <div class="col-md-4 col-lg-3 mb-4 mb-md-0">
                 <h5 class="text-uppercase">Acerca de nosotros</h5>
-                <p class="text-muted">Somos una farmacia con servicio de antencion medica por medio de citas programas.
+                <p class="text-muted">Somos una farmacia con servicio de antencion medica por medio de citas programadas.
                     contamos con multiples especialistas y servicios medico para anteder tus malestares y necesidades de
                     la salud</p>
                 <p class="text-muted">Esto es un proyecto universitario</p>
