--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -9,6 +9,7 @@
             <li><a [routerLink]="['reporte']">Agenda</a></li>
             <li><a [routerLink]="['acercade']">Acerca de</a></li>
             <li><a [routerLink]="['portafolio']">Portafolio</a></li>
+            <li><a [routerLink]="['portafolio']">Registrarse</a></li>
         </ul>
     </nav>
     <button><a [routerLink]="['menucita']">Solicita Cita</a></button>
