--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,32 +1,32 @@
-<header>
+<nav class="navbar navbar-expand-lg bg-body-tertiary" style="background-color: #e3f2fd;">
+  <div class="container-fluid">
     <div class="logo">
-        <img src="assets/img/navbar/simi.png" alt="">
-        <p>Farmacias Parecidas</p>
+      <img src="assets/img/navbar/simi.png" alt="">
+      <p>Farmacias Parecidas</p>
     </div>
-    <nav>
-        <ul>
-            <li><a [routerLink]="['principal']">Inicio</a></li>
-            <li><a [routerLink]="['reporte']">Agenda</a></li>
-            <li><a [routerLink]="['acercade']">Acerca de</a></li>
-            <li><a [routerLink]="['portafolio']">Portafolio</a></li>
-        </ul>
-    </nav>
-    <button><a [routerLink]="['menucita']">Solicita Cita</a></button>
-    <form class="d-flex" role="search">
-      <input
-        class="form-control"
-        type="search"
-        placeholder="Buscar nombre"
-        aria-label="Search"
-        [(ngModel)]="nombre"
-        name="nombre"
-      />
-      <button
-        class="btn btn-outline-success"
-        type="submit"
-        (click)="buscarCitas()"
-      >
-      Buscar
-      </button>
-  </form>
-</header>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link" aria-current="page" [routerLink]="['principal']">Inicio</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" aria-current="page" [routerLink]="['reporte']">Agenda</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" aria-current="page" [routerLink]="['acercade']">Acerca de</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" aria-current="page" [routerLink]="['portafolio']">Portafolio</a>
+        </li>
+      </ul>
+      <button class="btn btn-outline-success"><a [routerLink]="['menucita']">Solicita una cita</a></button>
+      <form class="d-flex" role="search">
+        <input class="form-control me-2" type="search" placeholder="Buscar nombre" aria-label="Search" [(ngModel)]="nombre" name="nombre">
+        <button class="btn btn-outline-success" type="submit" (click)="buscarCitas()">Buscar</button>
+      </form>
+    </div>
+  </div>
+</nav>
