Organizacion de imagenes

--- a/src/app/principal/principal.component.html
+++ b/src/app/principal/principal.component.html
@@ -1,6 +1,6 @@
 <div class="banner">
     <div class="banner-img-container">
-      <img src="assets/img/fondo_banner.jpg" alt="Imagen de fondo del banner">
+      <img src="assets/img/principal/fondo_banner.jpg" alt="Imagen de fondo del banner">
     </div>
     <h1>Bienvenido a Farmacias Parecidas</h1>
     <p>Parecido pero de un precio inferior</p>
@@ -8,19 +8,19 @@
 <div class="recomendacion">
 <mat-grid-list cols="3" rowHeight="250px">
     <mat-grid-tile>
-      <img src="assets/img/uno.png">
+      <img src="assets/img/principal/uno.png">
       <mat-grid-tile-footer>
         <h3>Precios más bajos</h3>
       </mat-grid-tile-footer>
     </mat-grid-tile>
     <mat-grid-tile>
-      <img src="assets/img/dos.png">
+      <img src="assets/img/principal/dos.png">
       <mat-grid-tile-footer>
         <h3>Los mejores doctores</h3>
       </mat-grid-tile-footer>
     </mat-grid-tile>
     <mat-grid-tile>
-      <img src="assets/img/tres.jpeg">
+      <img src="assets/img/principal/tres.jpeg">
       <mat-grid-tile-footer>
         <h3>Amor a los gatos</h3>
       </mat-grid-tile-footer>
@@ -29,7 +29,7 @@
 </div>
 
 <iframe
-  style="display:block;margin: 0 auto;"
+  style="display:block;margin: 30px auto;"
   width="560"
   height="315"
   [src]="video | domseguro:'https://www.youtube.com/embed/' "
