--- a/src/app/acercade/acercade.component.css
+++ b/src/app/acercade/acercade.component.css
@@ -1,7 +1,7 @@
 #map { height: 500px; }
 
 #quees{
-    background-image: linear-gradient(rgba(116, 235, 195, 0.5), rgba(21, 39, 245, 0.5)),url("../../assets/imagenes/medico.jpg");
+    background-image: linear-gradient(rgba(116, 235, 195, 0.5), rgba(21, 39, 245, 0.5)),url("../../assets/img/acercade/medico.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
